--- a/board.Rmd
+++ b/board.Rmd
@@ -8,7 +8,7 @@ output: html_document
 
 <img src="images/soumya.jpg" style="width:10%; border-radius:50%; margin-right: 20px"; align="left">
 
-Soumya Kalra is currently a quantitative analyst the within the Market Risk Group for Supervision at the New York Federal Reserve Bank.  Previously she worked as a researcher at the Office of Financial Research at the Department of Treasury focusing covering commodities and private funds from a financial stability perspective.  She is very passionate about using R in her statistical and data visualization work in her current role.  Her vision for R-Ladies New York is to create gender diverse and open forum where we can educate and contribute to the development of R as a community.  She holds a Masters in Mathematical Finance and a Bachelor’s degree in Economics from Rutgers University.
+Soumya Kalra is currently a quantitative analyst the within the Market Risk Group for Supervision at the New York Federal Reserve Bank.  Previously she worked as a researcher at the Office of Financial Research at the Department of Treasury focusing covering commodities and private funds from a financial stability perspective.  She is very passionate about using R in the statistical and data visualization work she performs in her current role.  Her vision for R-Ladies New York is to create gender diverse and open forum where we can educate and contribute to the development of R as a community.  She holds a Masters in Mathematical Finance and a Bachelor’s degree in Economics from Rutgers University.
 
 <br/>
 
