adding December event

--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ Check out our [Meetup](https://www.meetup.com/rladies-newyork/) page to join and
 
 ### Upcoming events
 
-Our final event of the year is on December 12, 2017 where Erin Grand will talk about how R is used in the Education World. 
+Our **final event of 2017** is on December 12, 2017 where Erin Grand will talk about how R is used in the Education World. 
 [Register here](https://www.meetup.com/rladies-newyork/events/245064725/)
 
 Help us choose a book for the January 2018 book club by completing this survey:
